[project]
name = "pip-test"
version = "0.1.13"
description = "Add your description here"
authors = [
    { name = "Mikhail V. Zhukov", email = "mikhail.v.zhukov@gmail.com" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["pip_test"]
exclude = [
    "pip_test/bin*",
    "pip_test/data/*",
    "db",
    "contrib",
    "docs",
    "tests*",
]

[tool.hatch.build.targets.sdist]
exclude = [
    "pip_test/bin/.*",
    "pip_test/data/*",
    "db",
    "contrib",
    "docs",
    "tests*",
]
